<resources>
    <string name="app_name">Quest Food</string>
    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_profile">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Pricture</string>
    <string name="back">Back</string>
    <string name="user_name">Nome</string>
    <string name="user_email">a@a.com.br</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="menu_item">Menu Item</string>

    <!-- Menu de Opções -->
    <string name="my_address">My Address</string>
    <string name="wishlist">Wishlist</string>
    <string name="order_history">Order History</string>
    <string name="notification">Notification</string>
    <string name="cards">Cards</string>
    <string name="manage_passwords">Manage Passwords</string>
    <string name="security">Security</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="quest">Quest</string>
    <string name="home">Home</string>

    <!-- Valores padrão para o perfil -->
    <string name="default_user_name">Guest</string>
    <string name="default_user_email">guest@example.com</string>
    <string name="close">Fechar</string>
    <string name="register_title">Criar Conta</string>
    <string name="select_image">ADD Imagem</string>

    <!-- Estilo para o botão Google -->
    <string name="default_web_client_id">784322883731-fd7ceajlu2o1jf5eb892il88fq3613bg.apps.googleusercontent.com</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="promotion">Desconto de 10%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Estilo padrão para todos os EditText -->

</resources>