<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/questFragment"
        android:icon="@drawable/map"
        android:title="@string/quest"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
